--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio Website for Polett Arias"/>
     <meta name="author" content="Polett Arias">
     <title class="title">Polett's Portfolio</title>
-    <link href="Portfolio Website.css" rel="stylesheet"/>
+    <link href="index.css" rel="stylesheet"/>
 </head>
     <body>
         <!--Navigation bar-->
