just keep swimming

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Portfolio Website for Polett Arias"/>
     <meta name="author" content="Polett Arias">
-    <title class="title">Polett's Portfolio</title>
+    <title class="title">Projects</title>
     <link href="index.css" rel="stylesheet"/>
 </head>
     <body>
@@ -22,7 +22,7 @@
         <main>
             <!--Welcome section-->
             <div>
-            <h1>This is the home page.</h1>
+            <h1>These are my projects!</h1>
             <hr class="break">
             </div>
         </main>
