just keep swimming3

--- a/projects.html
+++ b/projects.html
@@ -15,12 +15,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Profile</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
-            <!--Welcome section-->
+            <!--Project section with link/download-->
             <div>
             <h1>These are my projects!</h1>
             <hr class="break">
