--- a/about.html
+++ b/about.html
@@ -15,12 +15,12 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Profile</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
-            <!--Welcome section-->
+            <!--About section-->
             <div>
             <h1>I am Polett Arias.</h1>
             <hr class="break">
