just keep swimming

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main>
             <!--Welcome section-->
             <div>
-            <h1>This is the home page.</h1>
+            <h1>Hello! I am Polett Arias, welcome to my portfolio website.</h1>
             <hr class="break">
             </div>
         </main>
