--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio Website for Polett Arias"/>
     <meta name="author" content="Polett Arias">
     <title class="title">Polett</title>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="about.css" rel="stylesheet"/>
 </head>
     <body>
         <!--Navigation bar-->
