--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio Website for Polett Arias"/>
     <meta name="author" content="Polett Arias">
     <title class="title">Contact</title>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="contact.css" rel="stylesheet"/>
 </head>
     <body>
         <!--Navigation bar-->
