--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio Website for Polett Arias"/>
     <meta name="author" content="Polett Arias">
     <title class="title">Projects</title>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="projects.css" rel="stylesheet"/>
 </head>
     <body>
         <!--Navigation bar-->
