--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Portfolio Website for Polett Arias"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio Website for Polett Arias">
     <meta name="author" content="Polett Arias">
     <title class="title">Polett's Portfolio</title>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="index.css" rel="stylesheet">
 </head>
     <body>
         <!--Navigation bar-->
