just keep swimming

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <h1>Hello! I am Polett Arias, welcome to my portfolio website.</h1>
             <hr class="break">
             </div>
+            <div>
+                <h2>This is currently a work in progress.</h2>
+            </div>
         </main>
     </body>
 </html>
