--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,15 @@
             <h1>These are my projects!</h1>
             <hr class="break">
             </div>
+            <div>
+                <h2>Project 1</h2>
+            </div>
+            <div>
+                <h2>Project 2</h2>
+            </div>
+            <div>
+                <h2>Project 3</h2>
+            </div>
         </main>
     </body>
 </html>
