--- a/about.html
+++ b/about.html
@@ -25,6 +25,12 @@
             <h1>I am Polett Arias.</h1>
             <hr class="break">
             </div>
+            <div>
+                <h2>I am a junior at Saguaro highschool.</h2>
+            </div>
+            <div>
+                <h2>I am pursing my interest in Artificial Intelligence and Web Development at EVIT.</h2>
+            </div>
         </main>
     </body>
 </html>
