--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,15 @@
             <h1>You can contact me with the following links!</h1>
             <hr class="break">
             </div>
+            <div>
+                <h2>Github</h2>
+            </div>
+            <div>
+                <h2>Codewars</h2>
+            </div>
+            <div>
+                <h2>LinkedIn</h2>
+            </div>
         </main>
     </body>
 </html>
