--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
         <!--Navigation bar-->
         <nav class="navbar">
             <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
             <!--Welcome section-->
-            <div>
+            <div class="content">
             <h1>Hello! I am Polett Arias, welcome to my portfolio website.</h1>
             <hr class="break">
             </div>
             <div>
                 <h2>This is currently a work in progress.</h2>
+                <h2>Certifications will be here.</h2>
             </div>
         </main>
     </body>
