contact page started

--- a/contact.html
+++ b/contact.html
@@ -20,20 +20,35 @@
         </nav>
 
         <main>
-            <!--Contact section with links-->
-            <div>
-            <h1>You can contact me with the following links!</h1>
+            <!--Email Form-->
+            <div class="contact-container">
+                <form action="" class="contact-left">
+                    <div class="contact-left-title">
+                        <h1>Send a message!</h1>
+                        <hr>
+                    </div>
+                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+                    <input type="email" name="email" placeholder="Your email" class="contact-inputs" required>
+                    <textarea name="message" id="" placeholder="Your Message" class="contact-inputs" required></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+              </div>
             <hr class="break">
-            </div>
-            <div>
-                <h2>Github</h2>
-            </div>
-            <div>
-                <h2>Codewars</h2>
-            </div>
-            <div>
-                <h2>LinkedIn</h2>
-            </div>
         </main>
+        <footer>
+        <div>
+        <!--Contact section with links-->
+            <h2 class="email">Contact Me</h2> 
+        </div>
+        <div class="contacts">
+            <h2><a href="https://github.com/ariaspolett">Github</a></h2>
+        </div>
+        <div class="contacts">
+            <h2><a href="https://www.codewars.com/users/polaria">Codewars</a></h2>
+        </div>
+        <div class="contacts">
+            <h2><a href="https://www.linkedin.com/in/polett-arias-6ab39634b/LinkedIn">Linkedin</a></h2>
+        </div>
+        </footer>
     </body>
 </html>
