--- a/projects.html
+++ b/projects.html
@@ -26,13 +26,13 @@
             <hr class="break">
             </div>
             <div>
-                <h2>Project 1</h2>
+                <h2 class="project-tile">Project 1</h2>
             </div>
             <div>
-                <h2>Project 2</h2>
+                <h2 class="project-tile">Project 2</h2>
             </div>
             <div>
-                <h2>Project 3</h2>
+                <h2 class="project-tile">Project 3</h2>
             </div>
         </main>
     </body>
