--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio Website for Polett Arias">
     <meta name="author" content="Polett Arias">
-    <title class="title">Contact</title>
+    <title>Contact</title>
     <link href="contact.css" rel="stylesheet">
 </head>
     <body>
@@ -18,26 +18,30 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-
+        <hr>
         <main>
             <!--Email Form-->
             <div class="contact-container">
-                <form action="" class="contact-left">
+                    <img src="C:\Users\paria076\Pictures\matthew-mcbrayer-qD9xzm7yK9U-unsplash (2).jpg" alt="Photo by Matthew McBrayer on Unsplash" class="fullscreen-img">
+                <form action="https://api.web3forms.com/submit" method="POST" class="contact-left overlay-text">
                     <div class="contact-left-title">
-                        <h1>Send a message!</h1>
+                        <h1>GET IN TOUCH.</h1>
+                        <h2 class="h2">SEND A MESSAGE!</h2>
                         <hr>
                     </div>
-                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+                    <input type="hidden" name="access_key" value="3f0ea753-db9c-4330-b0cb-fc812a5b5424">
+                    <input type="text" name="first_name" placeholder="Your First Name" class="contact-inputs" required>
+                    <input type="text" name="last_name" placeholder="Your Last Name" class="contact-inputs" required>
                     <input type="email" name="email" placeholder="Your email" class="contact-inputs" required>
-                    <textarea name="message" id="" placeholder="Your Message" class="contact-inputs" required></textarea>
-                    <button type="submit">Submit</button>
+                    <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
+                    <button type="submit">Send</button>
                 </form>
-              </div>
+            </div>
             <hr class="break">
         </main>
         <footer>
-        <div>
         <!--Contact section with links-->
+        <div>
             <h2 class="email">Contact Me</h2> 
         </div>
         <div class="contacts">
