--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="author" content="Polett Arias">
     <title class="title">Polett's Portfolio</title>
     <link href="index.css" rel="stylesheet">
+    <style>
+    
+    </style>
 </head>
     <body>
         <!--Navigation bar-->
@@ -18,16 +21,22 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-
+        <hr>
         <main>
             <!--Welcome section-->
-            <div class="content">
-            <h1>Hello! I am Polett Arias, welcome to my portfolio website.</h1>
-            <hr class="break">
-            </div>
             <div>
+                <h1 class="overlay    <img src="C:\Users\paria076\Pictures\matthew-mcbrayer-qD9xzm7yK9U-unsplash (2).jpg" alt="Photo by Matthew McBrayer on Unsplash" class="fullscreen-img">
+            </div>-text">Hello! I am Polett Arias. Welcome to my portfolio website.</h1>
+            
+            <!--Certification section-->
+            <div class="overlay-text">
                 <h2>This is currently a work in progress.</h2>
-                <h2>Certifications will be here.</h2>
+                <h1>Certifications</h2>
+                <h2>Python</h2>
+                <h2>HTML & CSS</h2>
+                <h2>Databases</h2>
+            </div>
+            <div class="cert">
             </div>
         </main>
     </body>
