added some hr's between the navbar and the rest of the page,  added background to home page

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <hr>
+        <hr class="break">
         <main>
             <!--Email Form-->
             <div class="contact-container">
@@ -39,19 +39,21 @@
             </div>
             <hr class="break">
         </main>
-        <footer>
         <!--Contact section with links-->
+        <footer>
         <div>
             <h2 class="email">Contact Me</h2> 
         </div>
-        <div class="contacts">
-            <h2><a href="https://github.com/ariaspolett">Github</a></h2>
-        </div>
-        <div class="contacts">
-            <h2><a href="https://www.codewars.com/users/polaria">Codewars</a></h2>
-        </div>
-        <div class="contacts">
-            <h2><a href="https://www.linkedin.com/in/polett-arias-6ab39634b/LinkedIn">Linkedin</a></h2>
+        <div class="contact-links">
+            <div class="contacts">
+                <h2><a href="https://github.com/ariaspolett">Github</a></h2>
+            </div>
+            <div class="contacts">
+                <h2><a href="https://www.codewars.com/users/polaria">Codewars</a></h2>
+            </div>
+            <div class="contacts">
+                <h2><a href="https://www.linkedin.com/in/polett-arias-6ab39634b/LinkedIn">Linkedin</a></h2>
+            </div>
         </div>
         </footer>
     </body>
