--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
         <hr>
         <main>
             <!--Welcome section-->
-            <div>
-                <h1 class="overlay    <img src="C:\Users\paria076\Pictures\matthew-mcbrayer-qD9xzm7yK9U-unsplash (2).jpg" alt="Photo by Matthew McBrayer on Unsplash" class="fullscreen-img">
-            </div>-text">Hello! I am Polett Arias. Welcome to my portfolio website.</h1>
-            
+            <div class="container">
+                <img src="C:\Users\paria076\Pictures\matthew-mcbrayer-qD9xzm7yK9U-unsplash (2).jpg" alt="Photo by Matthew McBrayer on Unsplash" class="fullscreen-img">
+                <h1 class="overlay-text">Hello! I am Polett Arias. Welcome to my portfolio website.</h1>
+            </div>
+            <hr class="break">
             <!--Certification section-->
-            <div class="overlay-text">
-                <h2>This is currently a work in progress.</h2>
+            <div>
                 <h1>Certifications</h2>
                 <h2>Python</h2>
                 <h2>HTML & CSS</h2>
                 <h2>Databases</h2>
-            </div>
-            <div class="cert">
             </div>
         </main>
     </body>
