changed absolute path to relative path for the images, the images should work on other computers and devices

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
         <hr>
         <main>
             <!--Welcome section-->
-            <div class="container">
-                <img src="C:\Users\paria076\Pictures\matthew-mcbrayer-qD9xzm7yK9U-unsplash (2).jpg" alt="Photo by Matthew McBrayer on Unsplash" class="fullscreen-img">
+            <div class="contact-container">
                 <h1 class="overlay-text">Hello! I am Polett Arias. Welcome to my portfolio website.</h1>
             </div>
             <hr class="break">
