added certification pictures with a border

--- a/index.html
+++ b/index.html
@@ -29,12 +29,24 @@
             </div>
             <hr class="break">
             <!--Certification section-->
-            <div>
+            <div class="cert">
                 <h1>Certifications</h2>
-                <h2>Python</h2>
-                <h2>HTML & CSS</h2>
-                <h2>Databases</h2>
+                <div class="border">
+                    <h2>Python</h2>
+                <img src="images/Python.jpg" class="image">
+                </div>
+                <br>
+                <div class="border">
+                    <h2>HTML & CSS</h2>
+                <img src="images/HTML&CSS.jpg" class="image">
+                </div>
+                <br>
+                <div class="border">
+                    <h2>Databases</h2>
+                    <img src="images/Databases.jpg" class="image"> 
+                </div>
             </div>
+            <br>
         </main>
     </body>
 </html>
