added a button that goes to resume, added some language logos (not done placing them correctly), and made navbar more responsive

--- a/about.html
+++ b/about.html
@@ -20,16 +20,18 @@
         </nav>
         <hr class="break">
         <main>
+        <div class="contact-container">
             <!--About section-->
             <div>
             <h1>I am Polett Arias.</h1>
             </div>
             <div>
-                <h2>I am a junior at Saguaro highschool.</h2>
+                <h2>I am a junior at Saguaro highschool.I am pursing my interest in Artificial Intelligence and Web Development at EVIT.</h2>
             </div>
             <div>
-                <h2>I am pursing my interest in Artificial Intelligence and Web Development at EVIT.</h2>
+                <a href="images/My Resume (1).pdf" target="_blank" rel="noopener" class="button">Resume</a>
             </div>
+        </div>
         </main>
     </body>
 </html>
