--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
                 <div class="border">
                     <h2>Python</h2>
                 <img src="images/Python.jpg" class="image">
+                <img src="images/icons8-python-48.png">
                 </div>
                 <br>
                 <div class="border">
                     <h2>HTML & CSS</h2>
                 <img src="images/HTML&CSS.jpg" class="image">
+                <img src="images/icons8-css-logo-48.png">
+                <img src="images/icons8-html-5-48.png">
                 </div>
                 <br>
                 <div class="border">
                     <h2>Databases</h2>
                     <img src="images/Databases.jpg" class="image"> 
+                    <img src="images/icons8-sql-48.png">
                 </div>
             </div>
             <br>
