--- a/projects.html
+++ b/projects.html
@@ -20,19 +20,15 @@
         </nav>
         <hr class="break">
         <main>
+        <div class="contact-container">
             <!--Project section with link/download-->
-            <div>
-            <h1>These are my projects!</h1>
-            </div>
-            <div>
+            <div class="overlay-text">
+                <h2>These are my projects!</h1>
                 <h2 class="project-tile">Project 1</h2>
-            </div>
-            <div>
                 <h2 class="project-tile">Project 2</h2>
-            </div>
-            <div>
                 <h2 class="project-tile">Project 3</h2>
             </div>
+        </div
         </main>
     </body>
 </html>
