put programming language images and padding around certs, converted px to rem for all css styling, added a timeline for the about page

--- a/about.html
+++ b/about.html
@@ -20,14 +20,34 @@
         </nav>
         <hr class="break">
         <main>
-        <div class="contact-container">
+        <div>
             <!--About section-->
-            <div>
             <h1>I am Polett Arias.</h1>
+            <!--beginning of timeline-->
+            <div class="timeline">
+                <div class="timeline-item">
+                  <div class="timeline-date">2022-2023</div>
+                  <div class="timeline-content">
+                    <h3>Started High School</h3>
+                    <p>IB</p>
+                  </div>
+                </div>
+                <div class="timeline-item">
+                  <div class="timeline-date">2023-2024</div>
+                  <div class="timeline-content">
+                    <h3>Sophomore Year</h3>
+                    <p>IB</p>
+                  </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">2024-2025</div>
+                    <div class="timeline-content">
+                      <h3>Junior Year</h3>
+                      <p>ACE & EVIT</p>
+                    </div>
+                  </div>
             </div>
-            <div>
-                <h2>I am a junior at Saguaro highschool.I am pursing my interest in Artificial Intelligence and Web Development at EVIT.</h2>
-            </div>
+              <!--end of timeline-->
             <div>
                 <a href="images/My Resume (1).pdf" target="_blank" rel="noopener" class="button">Resume</a>
             </div>
