--- a/index.html
+++ b/index.html
@@ -31,23 +31,31 @@
             <!--Certification section-->
             <div class="cert">
                 <h1>Certifications</h2>
-                <div class="border">
-                    <h2>Python</h2>
-                <img src="images/Python.jpg" class="image">
-                <img src="images/icons8-python-48.png">
+                <div class="image-row"> 
+                    <img src="images/icons8-python-48.png" class="side-images">
+                    <div class="border">
+                        <h2>Python</h2>
+                        <img src="images/Python.jpg" class="image">
+                    </div>
+                    <img src="images/icons8-python-48.png" class="side-images">
                 </div>
                 <br>
-                <div class="border">
-                    <h2>HTML & CSS</h2>
-                <img src="images/HTML&CSS.jpg" class="image">
-                <img src="images/icons8-css-logo-48.png">
-                <img src="images/icons8-html-5-48.png">
+                <div class="image-row"> 
+                    <img src="images/icons8-html-5-48.png" class="side-images">
+                    <div class="border">
+                        <h2>HTML & CSS</h2>
+                        <img src="images/HTML&CSS.jpg" class="image">
+                    </div>
+                    <img src="images/icons8-css-logo-48.png" class="side-images">
                 </div>
                 <br>
-                <div class="border">
-                    <h2>Databases</h2>
-                    <img src="images/Databases.jpg" class="image"> 
-                    <img src="images/icons8-sql-48.png">
+                <div class="image-row"> 
+                    <img src="images/icons8-sql-48.png" class="side-images">
+                    <div class="border">
+                        <h2>Databases</h2>
+                        <img src="images/Databases.jpg" class="image"> 
+                    </div>
+                    <img src="images/icons8-sql-48.png" class="side-images">
                 </div>
             </div>
             <br>
