added background to about and project pages, added project files needed for project section, made about page more responsive

--- a/projects.html
+++ b/projects.html
@@ -20,15 +20,22 @@
         </nav>
         <hr class="break">
         <main>
-        <div class="contact-container">
-            <!--Project section with link/download-->
-            <div class="overlay-text">
-                <h2>These are my projects!</h1>
-                <h2 class="project-tile">Project 1</h2>
-                <h2 class="project-tile">Project 2</h2>
-                <h2 class="project-tile">Project 3</h2>
+            <div class="contact-container"></div>
+            <div>
+                <!--Project section with link/download-->
+                <div class="overlay-text">
+                    <h2>These are my projects!</h1>
+                        <a href="Guess the number.py" download class="project-tile">
+                            Download Guess the Number!
+                        </a>
+                        <a href="guess the word.py" download class="project-tile">
+                            Download Guess the Word!
+                        </a>
+                        <a href="rock paper scissors.py" download class="project-tile">
+                            Download Rock Paper Scissors!
+                        </a>
+                </div>
             </div>
-        </div
         </main>
     </body>
 </html>
