--- a/about.html
+++ b/about.html
@@ -20,38 +20,43 @@
         </nav>
         <hr class="break">
         <main>
-        <div>
-            <!--About section-->
-            <h1>I am Polett Arias.</h1>
-            <!--beginning of timeline-->
-            <div class="timeline">
-                <div class="timeline-item">
-                  <div class="timeline-date">2022-2023</div>
-                  <div class="timeline-content">
-                    <h3>Started High School</h3>
-                    <p>IB</p>
-                  </div>
-                </div>
-                <div class="timeline-item">
-                  <div class="timeline-date">2023-2024</div>
-                  <div class="timeline-content">
-                    <h3>Sophomore Year</h3>
-                    <p>IB</p>
-                  </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-date">2024-2025</div>
+          <div class="contact-container"></div>
+          <!--About section-->
+            <div class="overlay-text">
+              <h1>I am Polett Arias.</h1>
+              <!--picture of me-->
+            
+              <!--end of picture-->
+
+              <!--beginning of timeline-->
+              <div class="timeline">
+                  <div class="timeline-item">
+                    <div class="timeline-date">2022-2023</div>
                     <div class="timeline-content">
-                      <h3>Junior Year</h3>
-                      <p>ACE & EVIT</p>
+                      <h3>Started High School</h3>
+                      <p>IB</p>
                     </div>
                   </div>
-            </div>
+                  <div class="timeline-item">
+                    <div class="timeline-date">2023-2024</div>
+                    <div class="timeline-content">
+                      <h3>Sophomore Year</h3>
+                      <p>IB</p>
+                    </div>
+                  </div>
+                  <div class="timeline-item">
+                      <div class="timeline-date">2024-2025</div>
+                      <div class="timeline-content">
+                        <h3>Junior Year</h3>
+                        <p>ACE & EVIT</p>
+                      </div>
+                    </div>
+              </div>
               <!--end of timeline-->
-            <div>
+              <div>
                 <a href="images/My Resume (1).pdf" target="_blank" rel="noopener" class="button">Resume</a>
-            </div>
-        </div>
+              </div>
+          </div>
         </main>
     </body>
 </html>
