--- a/projects.html
+++ b/projects.html
@@ -25,13 +25,13 @@
                 <!--Project section with link/download-->
                 <div class="overlay-text">
                     <h2>These are my projects!</h1>
-                        <a href="Guess the number.py" download class="project-tile">
+                        <a href="projects/Guess the number.py" download class="project-tile">
                             Download Guess the Number!
                         </a>
-                        <a href="guess the word.py" download class="project-tile">
+                        <a href="projects/guess the word.py" download class="project-tile">
                             Download Guess the Word!
                         </a>
-                        <a href="rock paper scissors.py" download class="project-tile">
+                        <a href="projects/rock paper scissors.py" download class="project-tile">
                             Download Rock Paper Scissors!
                         </a>
                 </div>
