--- a/projects.html
+++ b/projects.html
@@ -23,18 +23,12 @@
             <div class="contact-container"></div>
                 <!--Project section with link/download-->
                 <div class="overlay-text">
+                    <br>
                     <h1>These are my projects!</h1>
-                        <a href="projects/Guess the number.py" download class="project-tile">
-                            Download Guess the Number!
-                        </a>
-                        <a href="projects/guess the word.py" download class="project-tile">
-                            Download Guess the Word!
-                        </a>
-                        <a href="projects/rock paper scissors.py" download class="project-tile">
-                            Download Rock Paper Scissors!
-                        </a>
+                    <iframe src="projects/hangman.html" width="800" height="700" frameborder="0" id="hangman-section"></iframe>
                 </div>
             </div>
         </main>
+        <script src="projects/hangman.js"></script>
     </body>
 </html>
